[gd_scene load_steps=20 format=3 uid="uid://b306kv5gp1g1d"]

[ext_resource type="Script" path="res://scripts/game/main.gd" id="1_b07es"]
[ext_resource type="Script" path="res://scripts/game/daynight_cycle.gd" id="1_kvkoo"]
[ext_resource type="PackedScene" uid="uid://qhvm71rgocqy" path="res://scenes/entities/player.tscn" id="3_ed0u7"]
[ext_resource type="PackedScene" uid="uid://bja5cekt6w7il" path="res://scenes/game/maps/island_map.tscn" id="3_kaw51"]
[ext_resource type="Texture2D" uid="uid://d33kw7jflx3kd" path="res://resources/styles/day_night_cycle_gradient.tres" id="5_plrb7"]
[ext_resource type="PackedScene" uid="uid://kh2acv2jodjg" path="res://scenes/game/touch_controls.tscn" id="6_8ksbt"]
[ext_resource type="Script" path="res://scripts/ui/ui.gd" id="6_650bn"]
[ext_resource type="FontFile" uid="uid://ir1tccvqesg0" path="res://assets/fonts/HomeVideo-Regular.otf" id="7_hfc3i"]
[ext_resource type="Texture2D" uid="uid://dktpf0vual5w7" path="res://assets/sprites/ui/joystick/tip.png" id="7_l68r5"]
[ext_resource type="PackedScene" uid="uid://bp4ok7uw3t2pc" path="res://scenes/ui/inventory_ui.tscn" id="8_8j8ts"]
[ext_resource type="Script" path="res://scripts/game/inventory_interface.gd" id="8_ljdau"]
[ext_resource type="Theme" uid="uid://bycwepbj8cxa4" path="res://resources/styles/theme.tres" id="8_uphgm"]
[ext_resource type="PackedScene" uid="uid://brjhehgl0gxvs" path="res://scenes/ui/hotbar.tscn" id="9_18rsb"]
[ext_resource type="PackedScene" uid="uid://bfw584m7iroxv" path="res://scenes/ui/dealer_ui.tscn" id="10_8mvnd"]
[ext_resource type="PackedScene" uid="uid://fsr4f6ublbtd" path="res://scenes/ui/item.tscn" id="11_e2075"]

[sub_resource type="Environment" id="Environment_ix6ey"]
background_mode = 2
tonemap_mode = 1
tonemap_exposure = 0.55
tonemap_white = 0.8
glow_bloom = 0.5
fog_mode = 1
fog_density = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_rpwmi"]
line_spacing = 0.0
font = ExtResource("7_hfc3i")
font_size = 33

[sub_resource type="Gradient" id="Gradient_r6sre"]
offsets = PackedFloat32Array(0.985294)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qxtpw"]
gradient = SubResource("Gradient_r6sre")

[node name="Main" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_b07es")
player_scene = ExtResource("3_ed0u7")
island_map = ExtResource("3_kaw51")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../Players")
spawn_limit = 4

[node name="World" type="Node2D" parent="."]
z_index = 2
y_sort_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="World"]
environment = SubResource("Environment_ix6ey")

[node name="DayNightCycle" type="CanvasModulate" parent="World"]
script = ExtResource("1_kvkoo")
gradient = ExtResource("5_plrb7")
time_speed = 2.0
current_hour = 9

[node name="Players" type="Node2D" parent="."]
z_index = 2
y_sort_enabled = true

[node name="UI" type="CanvasLayer" parent="." node_paths=PackedStringArray("joystick")]
script = ExtResource("6_650bn")
joystick = NodePath("InputControls/TouchControls")

[node name="InputControls" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TouchControls" parent="UI/InputControls" instance=ExtResource("6_8ksbt")]

[node name="MarginContainer" type="MarginContainer" parent="UI/InputControls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 150

[node name="Control" type="Control" parent="UI/InputControls/MarginContainer"]
custom_minimum_size = Vector2(192, 192)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="TouchScreenButton" type="TouchScreenButton" parent="UI/InputControls/MarginContainer/Control"]
modulate = Color(0, 0, 0, 0.466667)
scale = Vector2(3, 3)
texture_normal = ExtResource("7_l68r5")
texture_pressed = ExtResource("7_l68r5")
action = "interact"

[node name="Info" type="PanelContainer" parent="UI"]
anchors_preset = -1
anchor_right = 0.224
anchor_bottom = 0.182
offset_right = 0.279999
offset_bottom = -0.0400085

[node name="Margin" type="MarginContainer" parent="UI/Info"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Top" type="VBoxContainer" parent="UI/Info/Margin"]
layout_mode = 2
size_flags_vertical = 0

[node name="Line1" type="HBoxContainer" parent="UI/Info/Margin/Top"]
layout_mode = 2
alignment = 1

[node name="GlobalTime" type="Label" parent="UI/Info/Margin/Top/Line1"]
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("8_uphgm")
text = "Week 1, Day 1"
label_settings = SubResource("LabelSettings_rpwmi")
horizontal_alignment = 1

[node name="Line2" type="HBoxContainer" parent="UI/Info/Margin/Top"]
layout_mode = 2
alignment = 1

[node name="LocalTime" type="Label" parent="UI/Info/Margin/Top/Line2"]
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("8_uphgm")
text = "12:32"
label_settings = SubResource("LabelSettings_rpwmi")
horizontal_alignment = 1

[node name="Line3" type="HBoxContainer" parent="UI/Info/Margin/Top"]
layout_mode = 2

[node name="Fish" type="Label" parent="UI/Info/Margin/Top/Line3"]
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("8_uphgm")
text = "Fish: 0
"
label_settings = SubResource("LabelSettings_rpwmi")
horizontal_alignment = 1

[node name="InventoryInterface" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_ljdau")

[node name="DealerUI" parent="UI/InventoryInterface" instance=ExtResource("10_8mvnd")]
visible = false
layout_mode = 1
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/InventoryInterface"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.5
offset_top = -110.0
offset_right = 36.5
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="UI/InventoryInterface/VBoxContainer"]
layout_mode = 2

[node name="Hotbar" parent="UI/InventoryInterface/VBoxContainer" instance=ExtResource("9_18rsb")]
layout_mode = 2

[node name="Inventory" parent="UI/InventoryInterface" instance=ExtResource("8_8j8ts")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 0.0
offset_bottom = 0.0

[node name="GrabbedItem" parent="UI/InventoryInterface" instance=ExtResource("11_e2075")]
visible = false
modulate = Color(1, 1, 1, 0.486275)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -34.0
offset_right = 34.0
offset_bottom = 34.0

[node name="Fade" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="Fade"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_qxtpw")

[connection signal="time_changed" from="World/DayNightCycle" to="UI" method="_on_day_night_cycle_time_changed"]
[connection signal="inventory_opened" from="UI/InventoryInterface/VBoxContainer/Hotbar" to="UI/InventoryInterface" method="_on_hotbar_inventory_opened"]
